# roxy

./: Cargo.toml  LICENSE  init.sh  install.sh  uninstall.sh
roxy/: template.compose.yml  template.dockerfile
src/: cli.rs  main.rs
src/cli/: enter.rs  mod.rs
src/domain/: mod.rs  repo.rs
src/domain/usecase/: enter.rs  init.rs  kill.rs  list.rs  mod.rs
src/infra/: docker.rs  sqlite.rs
src/util/: mod.rs
