[package]
name = "roxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
indexmap = { version = "2.12.0", features = ["serde"] }
log = "0.4.28"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
simple_logger = "5.1.0"
tabled = "0.20.0"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }
